--- a/index.html
+++ b/index.html
@@ -4,30 +4,113 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Realtime Whiteboard (Ably)</title>
-  <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      font-family: sans-serif;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+      background: #fafafa;
+    }
+    h1 {
+      margin-top: 20px;
+    }
+    #toolbar {
+      margin: 10px auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 15px;
+    }
+    canvas {
+      border: 2px solid #000;
+      background: #fff;
+      display: block;
+      margin: 10px auto;
+      cursor: crosshair;
+    }
+  </style>
 </head>
 <body>
   <h1>Realtime Collaborative Whiteboard</h1>
-
   <div id="toolbar">
-    <label>Color:
-      <input type="color" id="colorPicker" value="#000000" />
-    </label>
-
-    <label>Brush size:
-      <input type="range" id="sizePicker" min="1" max="20" value="4" />
-    </label>
-
+    <label>Color: <input type="color" id="colorPicker" value="#000000" /></label>
+    <label>Brush: <input type="range" id="sizePicker" min="1" max="20" value="4" /></label>
     <button id="clearBtn">Clear</button>
   </div>
 
   <canvas id="canvas" width="800" height="600"></canvas>
 
-  <footer>
-    <p>Built with ❤️ using <a href="https://ably.com" target="_blank">Ably Realtime</a></p>
-  </footer>
-
   <script src="https://cdn.ably.io/lib/ably.min-1.js"></script>
-  <script src="script.js"></script>
+  <script>
+    // 👉 Put your Ably API key here
+    const ABLY_API_KEY = "YOUR_ABLY_API_KEY_HERE";
+
+    // Connect to Ably
+    const ably = new Ably.Realtime({ key: ABLY_API_KEY });
+    const channel = ably.channels.get("whiteboard");
+
+    // Setup canvas
+    const canvas = document.getElementById("canvas");
+    const ctx = canvas.getContext("2d");
+    ctx.lineCap = "round";
+
+    let drawing = false;
+    let lastX = 0;
+    let lastY = 0;
+    let color = document.getElementById("colorPicker").value;
+    let size = document.getElementById("sizePicker").value;
+
+    // --- Draw locally and publish to Ably ---
+    function start(e) {
+      drawing = true;
+      [lastX, lastY] = [e.offsetX, e.offsetY];
+    }
+
+    function move(e) {
+      if (!drawing) return;
+      const [x, y] = [e.offsetX, e.offsetY];
+
+      drawLine(lastX, lastY, x, y, color, size);
+      channel.publish("stroke", { x1: lastX, y1: lastY, x2: x, y2: y, color, size });
+
+      [lastX, lastY] = [x, y];
+    }
+
+    function stop() {
+      drawing = false;
+    }
+
+    function drawLine(x1, y1, x2, y2, color, size) {
+      ctx.strokeStyle = color;
+      ctx.lineWidth = size;
+      ctx.beginPath();
+      ctx.moveTo(x1, y1);
+      ctx.lineTo(x2, y2);
+      ctx.stroke();
+    }
+
+    // Event listeners
+    canvas.addEventListener("mousedown", start);
+    canvas.addEventListener("mousemove", move);
+    canvas.addEventListener("mouseup", stop);
+    canvas.addEventListener("mouseleave", stop);
+
+    // --- Listen for other users' strokes ---
+    channel.subscribe("stroke", (msg) => {
+      const { x1, y1, x2, y2, color, size } = msg.data;
+      drawLine(x1, y1, x2, y2, color, size);
+    });
+
+    // --- Tools ---
+    document.getElementById("colorPicker").onchange = (e) => (color = e.target.value);
+    document.getElementById("sizePicker").oninput = (e) => (size = e.target.value);
+    document.getElementById("clearBtn").onclick = () => {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      channel.publish("clear", {});
+    };
+
+    channel.subscribe("clear", () => ctx.clearRect(0, 0, canvas.width, canvas.height));
+  </script>
 </body>
 </html>
