--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       padding: 0;
       background: #fafafa;
       font-family: sans-serif;
-      overflow: hidden;
+      overflow: hidden; /* Prevent scrollbars */
     }
 
     #toolbar {
@@ -37,7 +37,7 @@
       height: calc(100% - 60px);
       background: #fff;
       cursor: crosshair;
-      touch-action: none; /* Prevents page scrolling on touch */
+      touch-action: none; /* Prevent page scrolling on touch */
     }
   </style>
 </head>
@@ -53,7 +53,7 @@
 
   <script src="https://cdn.ably.io/lib/ably.min-1.js"></script>
   <script>
-    // ✅ Your Ably API key
+    // ✅ Your Ably API key (replace for production security)
     const ABLY_API_KEY = "9DoYcA.L_yHCw:to2-Air7MUk4uKZoAcm1RAUpGiNlAkqwpJiLLKiRihU";
 
     // --- Ably Setup ---
@@ -66,7 +66,7 @@
     ctx.lineCap = "round";
     ctx.lineJoin = "round";
 
-    // Fit canvas to window below toolbar
+    // Fit canvas to window
     function resizeCanvas() {
       canvas.width = window.innerWidth;
       canvas.height = window.innerHeight - document.getElementById("toolbar").offsetHeight;
@@ -79,7 +79,7 @@
     let color = document.getElementById("colorPicker").value;
     let size = document.getElementById("sizePicker").value;
 
-    // --- Drawing Helper ---
+    // --- Draw a line on canvas ---
     function drawLine(x1, y1, x2, y2, color, size) {
       ctx.strokeStyle = color;
       ctx.lineWidth = size;
@@ -87,6 +87,30 @@
       ctx.moveTo(x1, y1);
       ctx.lineTo(x2, y2);
       ctx.stroke();
+    }
+
+    // --- Publish strokes with interpolation ---
+    function sendStroke(x1, y1, x2, y2) {
+      const dx = x2 - x1;
+      const dy = y2 - y1;
+      const dist = Math.hypot(dx, dy);
+      const steps = Math.ceil(dist / 2); // smaller segments
+
+      for (let i = 0; i < steps; i++) {
+        const sx1 = x1 + (dx * i) / steps;
+        const sy1 = y1 + (dy * i) / steps;
+        const sx2 = x1 + (dx * (i + 1)) / steps;
+        const sy2 = y1 + (dy * (i + 1)) / steps;
+
+        channel.publish("stroke", {
+          x1: sx1 / canvas.width,
+          y1: sy1 / canvas.height,
+          x2: sx2 / canvas.width,
+          y2: sy2 / canvas.height,
+          color,
+          size
+        });
+      }
     }
 
     // --- Mouse Drawing ---
@@ -99,14 +123,7 @@
       if (!drawing) return;
       const [x, y] = [e.offsetX, e.offsetY];
       drawLine(lastX, lastY, x, y, color, size);
-      channel.publish("stroke", {
-        x1: lastX / canvas.width,
-        y1: lastY / canvas.height,
-        x2: x / canvas.width,
-        y2: y / canvas.height,
-        color,
-        size
-      });
+      sendStroke(lastX, lastY, x, y);
       [lastX, lastY] = [x, y];
     });
 
@@ -131,14 +148,7 @@
       const x = touch.clientX - rect.left;
       const y = touch.clientY - rect.top;
       drawLine(lastX, lastY, x, y, color, size);
-      channel.publish("stroke", {
-        x1: lastX / canvas.width,
-        y1: lastY / canvas.height,
-        x2: x / canvas.width,
-        y2: y / canvas.height,
-        color,
-        size
-      });
+      sendStroke(lastX, lastY, x, y);
       [lastX, lastY] = [x, y];
     });
 
@@ -147,14 +157,7 @@
     // --- Receive Remote Strokes ---
     channel.subscribe("stroke", (msg) => {
       const { x1, y1, x2, y2, color, size } = msg.data;
-      drawLine(
-        x1 * canvas.width,
-        y1 * canvas.height,
-        x2 * canvas.width,
-        y2 * canvas.height,
-        color,
-        size
-      );
+      drawLine(x1 * canvas.width, y1 * canvas.height, x2 * canvas.width, y2 * canvas.height, color, size);
     });
 
     // --- Toolbar Controls ---
