--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
   <script src="https://cdn.ably.io/lib/ably.min-1.js"></script>
   <script>
-    // ✅ Your Ably API key (replace for production security)
+    // ✅ Your Ably API key
     const ABLY_API_KEY = "9DoYcA.L_yHCw:to2-Air7MUk4uKZoAcm1RAUpGiNlAkqwpJiLLKiRihU";
 
     // --- Ably Setup ---
@@ -89,12 +89,12 @@
       ctx.stroke();
     }
 
-    // --- Publish strokes with interpolation ---
+    // --- Publish strokes with guaranteed interpolation ---
     function sendStroke(x1, y1, x2, y2) {
       const dx = x2 - x1;
       const dy = y2 - y1;
       const dist = Math.hypot(dx, dy);
-      const steps = Math.ceil(dist / 2); // smaller segments
+      const steps = Math.max(Math.ceil(dist / 2), 1); // at least 1 step
 
       for (let i = 0; i < steps; i++) {
         const sx1 = x1 + (dx * i) / steps;
@@ -157,19 +157,34 @@
     // --- Receive Remote Strokes ---
     channel.subscribe("stroke", (msg) => {
       const { x1, y1, x2, y2, color, size } = msg.data;
-      drawLine(x1 * canvas.width, y1 * canvas.height, x2 * canvas.width, y2 * canvas.height, color, size);
+      drawLine(
+        x1 * canvas.width,
+        y1 * canvas.height,
+        x2 * canvas.width,
+        y2 * canvas.height,
+        color,
+        size
+      );
     });
 
     // --- Toolbar Controls ---
-    document.getElementById("colorPicker").addEventListener("change", (e) => color = e.target.value);
-    document.getElementById("sizePicker").addEventListener("input", (e) => size = e.target.value);
+    document.getElementById("colorPicker").addEventListener("change", (e) => {
+      color = e.target.value;
+    });
+
+    document.getElementById("sizePicker").addEventListener("input", (e) => {
+      size = e.target.value;
+    });
 
     document.getElementById("clearBtn").addEventListener("click", () => {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
       channel.publish("clear", {});
     });
 
-    channel.subscribe("clear", () => ctx.clearRect(0, 0, canvas.width, canvas.height));
+    channel.subscribe("clear", () => {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+    });
   </script>
 </body>
 </html>
+
