--- a/index.html
+++ b/index.html
@@ -1,188 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Realtime Collaborative Whiteboard (Ably)</title>
-  <style>
-    html, body {
-      height: 100%;
-      margin: 0;
-      padding: 0;
-      background: #fafafa;
-      font-family: sans-serif;
-      overflow: hidden; /* Prevent scrollbars */
-    }
-
-    #toolbar {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 15px;
-      background: #fff;
-      padding: 10px;
-      border-bottom: 2px solid #000;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      z-index: 10;
-    }
-
-    #canvas {
-      position: absolute;
-      top: 60px; /* Below toolbar */
-      left: 0;
-      width: 100%;
-      height: calc(100% - 60px);
-      background: #fff;
-      cursor: crosshair;
-      touch-action: none; /* Prevent page scrolling on touch */
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Realtime Collaborative Whiteboard (Ably)</title>
+<style>
+html, body { height: 100%; margin: 0; padding: 0; background: #fafafa; font-family: sans-serif; overflow: hidden; }
+#toolbar { display:flex; justify-content:center; align-items:center; gap:15px; background:#fff; padding:10px; border-bottom:2px solid #000; position:fixed; top:0; left:0; width:100%; z-index:10; }
+#canvas { position:absolute; top:60px; left:0; width:100%; height:calc(100% - 60px); background:#fff; cursor:crosshair; touch-action:none; }
+</style>
 </head>
 <body>
-  <div id="toolbar">
-    <strong>Realtime Whiteboard</strong>
-    <label>Color: <input type="color" id="colorPicker" value="#000000" /></label>
-    <label>Brush: <input type="range" id="sizePicker" min="1" max="20" value="4" /></label>
-    <button id="clearBtn">Clear</button>
-  </div>
+<div id="toolbar">
+<strong>Realtime Whiteboard</strong>
+<label>Color: <input type="color" id="colorPicker" value="#000000"/></label>
+<label>Brush: <input type="range" id="sizePicker" min="1" max="20" value="4"/></label>
+<button id="clearBtn">Clear</button>
+</div>
+<canvas id="canvas"></canvas>
+<script src="https://cdn.ably.io/lib/ably.min-1.js"></script>
+<script>
+const ABLY_API_KEY = "9DoYcA.L_yHCw:to2-Air7MUk4uKZoAcm1RAUpGiNlAkqwpJiLLKiRihU";
+const ably = new Ably.Realtime({ key: ABLY_API_KEY });
+const channel = ably.channels.get("whiteboard");
 
-  <canvas id="canvas"></canvas>
+const canvas = document.getElementById("canvas");
+const ctx = canvas.getContext("2d");
+ctx.lineCap = "round"; ctx.lineJoin = "round";
 
-  <script src="https://cdn.ably.io/lib/ably.min-1.js"></script>
-  <script>
-    const ABLY_API_KEY = "9DoYcA.L_yHCw:to2-Air7MUk4uKZoAcm1RAUpGiNlAkqwpJiLLKiRihU";
+function resizeCanvas() { canvas.width = window.innerWidth; canvas.height = window.innerHeight - document.getElementById("toolbar").offsetHeight; }
+window.addEventListener("resize", resizeCanvas);
+resizeCanvas();
 
-    // --- Ably Setup ---
-    const ably = new Ably.Realtime({ key: ABLY_API_KEY });
-    const channel = ably.channels.get("whiteboard");
+let drawing=false, lastX=0, lastY=0;
+let color=document.getElementById("colorPicker").value;
+let size=document.getElementById("sizePicker").value;
 
-    ably.connection.on('connected', () => console.log("Ably connected!"));
+function drawLine(x1,y1,x2,y2,color,size){
+  ctx.strokeStyle=color; ctx.lineWidth=size; ctx.beginPath(); ctx.moveTo(x1,y1); ctx.lineTo(x2,y2); ctx.stroke();
+}
 
-    // --- Canvas Setup ---
-    const canvas = document.getElementById("canvas");
-    const ctx = canvas.getContext("2d");
-    ctx.lineCap = "round";
-    ctx.lineJoin = "round";
+function sendStroke(x1,y1,x2,y2){
+  // send raw coordinates
+  channel.publish("stroke",{x1,y1,x2,y2,color,size});
+}
 
-    function resizeCanvas() {
-      canvas.width = window.innerWidth;
-      canvas.height = window.innerHeight - document.getElementById("toolbar").offsetHeight;
-    }
-    window.addEventListener("resize", resizeCanvas);
-    resizeCanvas();
+canvas.addEventListener("mousedown",(e)=>{
+  drawing=true; lastX=e.offsetX; lastY=e.offsetY;
+});
+canvas.addEventListener("mousemove",(e)=>{
+  if(!drawing) return;
+  const x=e.offsetX, y=e.offsetY;
+  drawLine(lastX,lastY,x,y,color,size);
+  sendStroke(lastX,lastY,x,y);
+  lastX=x; lastY=y;
+});
+canvas.addEventListener("mouseup",(e)=>{ drawing=false; });
+canvas.addEventListener("mouseleave",()=>drawing=false);
 
-    let drawing = false;
-    let lastX = 0, lastY = 0;
-    let color = document.getElementById("colorPicker").value;
-    let size = document.getElementById("sizePicker").value;
+canvas.addEventListener("touchstart",(e)=>{
+  e.preventDefault();
+  const rect=canvas.getBoundingClientRect();
+  const touch=e.touches[0];
+  drawing=true; lastX=touch.clientX-rect.left; lastY=touch.clientY-rect.top;
+});
+canvas.addEventListener("touchmove",(e)=>{
+  e.preventDefault(); if(!drawing) return;
+  const rect=canvas.getBoundingClientRect();
+  const touch=e.touches[0];
+  const x=touch.clientX-rect.left, y=touch.clientY-rect.top;
+  drawLine(lastX,lastY,x,y,color,size);
+  sendStroke(lastX,lastY,x,y);
+  lastX=x; lastY=y;
+});
+canvas.addEventListener("touchend",(e)=>{
+  drawing=false;
+});
 
-    // --- Draw a line on canvas ---
-    function drawLine(x1, y1, x2, y2, color, size) {
-      ctx.strokeStyle = color;
-      ctx.lineWidth = size;
-      ctx.beginPath();
-      ctx.moveTo(x1, y1);
-      ctx.lineTo(x2, y2);
-      ctx.stroke();
-    }
+channel.subscribe("stroke",(msg)=>{
+  const {x1,y1,x2,y2,color,size}=msg.data;
+  drawLine(x1,y1,x2,y2,color,size);
+});
 
-    // --- Publish strokes ---
-    function sendStroke(x1, y1, x2, y2) {
-      const rect = canvas.getBoundingClientRect();
-      channel.publish("stroke", {
-        x1: x1 / rect.width,
-        y1: y1 / rect.height,
-        x2: x2 / rect.width,
-        y2: y2 / rect.height,
-        color,
-        size
-      });
-    }
+document.getElementById("colorPicker").addEventListener("change",(e)=>color=e.target.value);
+document.getElementById("sizePicker").addEventListener("input",(e)=>size=e.target.value);
 
-    // --- Get mouse/touch position relative to canvas ---
-    function getPos(e) {
-      const rect = canvas.getBoundingClientRect();
-      if (e.touches) {
-        return {
-          x: e.touches[0].clientX - rect.left,
-          y: e.touches[0].clientY - rect.top
-        };
-      } else {
-        return {
-          x: e.clientX - rect.left,
-          y: e.clientY - rect.top
-        };
-      }
-    }
-
-    // --- Start drawing ---
-    function startDraw(e) {
-      e.preventDefault();
-      drawing = true;
-      const pos = getPos(e);
-      lastX = pos.x;
-      lastY = pos.y;
-    }
-
-    // --- Draw ---
-    function draw(e) {
-      e.preventDefault();
-      if (!drawing) return;
-      const pos = getPos(e);
-      drawLine(lastX, lastY, pos.x, pos.y, color, size);
-      sendStroke(lastX, lastY, pos.x, pos.y);
-      lastX = pos.x;
-      lastY = pos.y;
-    }
-
-    // --- Stop drawing ---
-    function stopDraw(e) {
-      if (!drawing) return;
-      const pos = getPos(e);
-      sendStroke(lastX, lastY, pos.x, pos.y);
-      drawing = false;
-    }
-
-    // --- Mouse Events ---
-    canvas.addEventListener("mousedown", startDraw);
-    canvas.addEventListener("mousemove", draw);
-    canvas.addEventListener("mouseup", stopDraw);
-    canvas.addEventListener("mouseleave", () => drawing = false);
-
-    // --- Touch Events ---
-    canvas.addEventListener("touchstart", startDraw);
-    canvas.addEventListener("touchmove", draw);
-    canvas.addEventListener("touchend", stopDraw);
-    canvas.addEventListener("touchcancel", () => drawing = false);
-
-    // --- Receive Remote Strokes ---
-    channel.subscribe("stroke", (msg) => {
-      if (msg.clientId === ably.clientId) return; // skip own strokes
-      const { x1, y1, x2, y2, color, size } = msg.data;
-      drawLine(
-        x1 * canvas.width,
-        y1 * canvas.height,
-        x2 * canvas.width,
-        y2 * canvas.height,
-        color,
-        size
-      );
-    });
-
-    // --- Toolbar Controls ---
-    document.getElementById("colorPicker").addEventListener("change", (e) => color = e.target.value);
-    document.getElementById("sizePicker").addEventListener("input", (e) => size = e.target.value);
-
-    document.getElementById("clearBtn").addEventListener("click", () => {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      channel.publish("clear", {});
-    });
-
-    channel.subscribe("clear", () => ctx.clearRect(0, 0, canvas.width, canvas.height));
-  </script>
+document.getElementById("clearBtn").addEventListener("click",()=>{
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+  channel.publish("clear",{});
+});
+channel.subscribe("clear",()=>ctx.clearRect(0,0,canvas.width,canvas.height));
+</script>
 </body>
 </html>
 
