--- a/index.html
+++ b/index.html
@@ -18,11 +18,31 @@ html,body{height:100%;margin:0;padding:0;background:#fafafa;font-family:sans-ser
 <button id="clearBtn">Clear</button>
 </div>
 <canvas id="canvas"></canvas>
-<script src="https://cdn.ably.io/lib/ably.min-1.js"></script>
+<script src="https://cdn.ably.io/lib/ably.min-1.2.4.js"></script>
 <script>
 const ABLY_API_KEY = "9DoYcA.L_yHCw:to2-Air7MUk4uKZoAcm1RAUpGiNlAkqwpJiLLKiRihU";
 const ably = new Ably.Realtime({ key: ABLY_API_KEY });
-const channel = ably.channels.get("whiteboard", { params: { rewind: "10" } }); // last 10 messages
+
+// --- FIX 1: Connection Status Monitoring ---
+// This is helpful for diagnosing brief disconnections
+ably.connection.on("disconnected", () => {
+    console.warn("Ably: Connection Disconnected. Reconnecting...");
+    // You could update a status indicator here
+});
+ably.connection.on("connected", () => {
+    console.log("Ably: Connection Established.");
+    // You could hide a status indicator here
+});
+ably.connection.on("failed", (error) => {
+    console.error("Ably: Connection Failed!", error);
+});
+
+
+// --- FIX 2: Sequenced Channel ---
+// Adding 'sequenced: "true"' ensures Ably delivers messages in the correct order, 
+// preventing strokes from jumping or fading due to out-of-order delivery.
+const channel = ably.channels.get("whiteboard", { params: { rewind: "100", sequenced: "true" } }); 
+
 
 const canvas=document.getElementById("canvas");
 const ctx=canvas.getContext("2d");
@@ -37,60 +57,92 @@ let size=document.getElementById("sizePicker").value;
 
 // Draw a line
 function drawLine(x1,y1,x2,y2,color,size){
-  ctx.strokeStyle=color; ctx.lineWidth=size; ctx.beginPath(); ctx.moveTo(x1,y1); ctx.lineTo(x2,y2); ctx.stroke();
-}
-
-// Send strokes with interpolation
-function sendStroke(x1,y1,x2,y2){
-  const dx=x2-x1, dy=y2-y1;
-  const dist=Math.hypot(dx,dy);
-  const steps=Math.max(Math.ceil(dist/2),1);
-  for(let i=0;i<steps;i++){
-    const sx1=x1 + dx*i/steps, sy1=y1 + dy*i/steps;
-    const sx2=x1 + dx*(i+1)/steps, sy2=y1 + dy*(i+1)/steps;
-    channel.publish("stroke",{x1:sx1,y1:sy1,x2:sx2,y2:sy2,color,size});
-  }
+  ctx.strokeStyle=color; ctx.lineWidth=size; ctx.beginPath(); ctx.moveTo(x1,y1); ctx.lineTo(x2,y2); ctx.stroke();
 }
 
 // Mouse
-canvas.addEventListener("mousedown",(e)=>{ drawing=true; lastX=e.offsetX; lastY=e.offsetY; });
-canvas.addEventListener("mousemove",(e)=>{
-  if(!drawing) return;
-  drawLine(lastX,lastY,e.offsetX,e.offsetY,color,size);
-  sendStroke(lastX,lastY,e.offsetX,e.offsetY);
-  lastX=e.offsetX; lastY=e.offsetY;
+canvas.addEventListener("mousedown",(e)=>{ 
+  drawing=true; 
+  lastX=e.offsetX; 
+  lastY=e.offsetY; 
 });
+
+canvas.addEventListener("mousemove",(e)=>{
+  if(!drawing) return;
+
+  // Draw the segment locally
+  drawLine(lastX,lastY,e.offsetX,e.offsetY,color,size);
+
+  // Publish the single segment over Ably (Fix for excessive messages from previous step)
+  channel.publish("stroke",{
+    x1: lastX,
+    y1: lastY,
+    x2: e.offsetX,
+    y2: e.offsetY,
+    color,
+    size
+  });
+
+  lastX=e.offsetX; 
+  lastY=e.offsetY;
+});
+
 canvas.addEventListener("mouseup",()=>drawing=false);
 canvas.addEventListener("mouseleave",()=>drawing=false);
 
+
 // Touch
 canvas.addEventListener("touchstart",(e)=>{
-  e.preventDefault(); const rect=canvas.getBoundingClientRect();
-  const touch=e.touches[0];
-  drawing=true; lastX=touch.clientX-rect.left; lastY=touch.clientY-rect.top;
-});
-canvas.addEventListener("touchmove",(e)=>{
-  e.preventDefault(); if(!drawing) return;
+  e.preventDefault(); 
   const rect=canvas.getBoundingClientRect();
-  const touch=e.touches[0];
-  drawLine(lastX,lastY,touch.clientX-rect.left,touch.clientY-rect.top,color,size);
-  sendStroke(lastX,lastY,touch.clientX-rect.left,touch.clientY-rect.top);
-  lastX=touch.clientX-rect.left; lastY=touch.clientY-rect.top;
+  const touch=e.touches[0];
+  drawing=true; 
+  lastX=touch.clientX-rect.left; 
+  lastY=touch.clientY-rect.top;
 });
+
+canvas.addEventListener("touchmove",(e)=>{
+  e.preventDefault(); 
+  if(!drawing) return;
+
+  const rect=canvas.getBoundingClientRect();
+  const touch=e.touches[0];
+  const currentX = touch.clientX-rect.left;
+  const currentY = touch.clientY-rect.top;
+
+  // Draw the segment locally
+  drawLine(lastX,lastY,currentX,currentY,color,size);
+
+  // Publish the single segment over Ably (Fix for excessive messages from previous step)
+  channel.publish("stroke",{
+    x1: lastX,
+    y1: lastY,
+    x2: currentX,
+    y2: currentY,
+    color,
+    size
+  });
+  
+  lastX=currentX; 
+  lastY=currentY;
+});
+
 canvas.addEventListener("touchend",()=>drawing=false);
 
-// Subscribe
+
+// Subscription
 channel.subscribe("stroke",(msg)=>{
-  const {x1,y1,x2,y2,color,size}=msg.data;
-  drawLine(x1,y1,x2,y2,color,size);
+  const {x1,y1,x2,y2,color,size}=msg.data;
+  drawLine(x1,y1,x2,y2,color,size);
 });
 
 // Toolbar
 document.getElementById("colorPicker").addEventListener("change",e=>color=e.target.value);
 document.getElementById("sizePicker").addEventListener("input",e=>size=e.target.value);
+
 document.getElementById("clearBtn").addEventListener("click",()=>{
-  ctx.clearRect(0,0,canvas.width,canvas.height);
-  channel.publish("clear",{});
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+  channel.publish("clear",{});
 });
 channel.subscribe("clear",()=>ctx.clearRect(0,0,canvas.width,canvas.height));
 </script>
